src/objects/Charket__WeChatQRCode__c.object
<CustomObject>
    <fields>
        <fullName>Charket__AttachmentId__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__CampaignMemberStatus__c</fullName>
        <label>Campaign Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ExistingFollowerScanCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scanned By Existing Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__ExpirationDate__c</fullName>
        <formula>IF( ISPICKVAL( Charket__Type__c , &apos;Temporary&apos;)  &amp;&amp;   NOT(ISNULL(Charket__WeChatCreatedDate__c))  , Charket__WeChatCreatedDate__c + Charket__ExpirationSeconds__c / 86400.00 , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__ExpirationSeconds__c</fullName>
        <label>Expiration Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsOverwriteFollowerTag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Follower Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__NewFollowerScanCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scanned by New Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Number__c</fullName>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Charket__ScanCount__c</fullName>
        <formula>Charket__NewFollowerScanCount__c  +  Charket__ExistingFollowerScanCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scanned Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Scene__c</fullName>
        <label>Scene</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>Charket__Skill__c</referenceTo>
        <relationshipLabel>WeChat QR Code</relationshipLabel>
        <relationshipName>WeChatQRCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__Ticket__c</fullName>
        <label>Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                    <default>true</default>
                    <label>Temporary</label>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__Url__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat QR Codes</relationshipLabel>
        <relationshipName>WeChatQRCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatCreatedDate__c</fullName>
        <label>WeChat Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Response</label>
        <referenceTo>Charket__WeChatResponse__c</referenceTo>
        <relationshipLabel>WeChat QR Codes</relationshipLabel>
        <relationshipName>WeChatQRCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WhatId__c</fullName>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>WeChat QR Code</label>
    <nameField>
        <label>WeChat QR Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat QR Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>